boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_casts_async_handles_and_callbacks_to_c_abi_types.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/async_handles_and_callbacks\")"
---
===== jni/demo.h =====
<c abi support declarations>
RustFutureHandle boltffi_function_demo_fetch_count(void);
int8_t boltffi_async_function_demo_fetch_count_poll(RustFutureHandle handle, uint64_t callback_data, void (*callback)(uint64_t, int8_t));
uint32_t boltffi_async_function_demo_fetch_count_complete(RustFutureHandle handle, FfiStatus *out_status);
FfiBuf_u8 boltffi_async_function_demo_fetch_count_panic_message(RustFutureHandle handle);
void boltffi_async_function_demo_fetch_count_cancel(RustFutureHandle handle);
void boltffi_async_function_demo_fetch_count_free(RustFutureHandle handle);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni continuation helper>
<jni exception helpers>
<jni status helper>
<jni byte-array helpers>
JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_continuation_load(env)) {
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_continuation_unload(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1fetch_1count(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    RustFutureHandle __boltffi_result = boltffi_function_demo_fetch_count();

    return (jlong)__boltffi_result;
}

JNIEXPORT jbyte JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1function_1demo_1fetch_1count_1poll(JNIEnv *env, jclass cls, jlong handle, jlong callback_data) {
    (void)cls;

    (void)env;
    int8_t __boltffi_result = boltffi_async_function_demo_fetch_count_poll((RustFutureHandle)handle, callback_data, boltffi_jni_continuation_callback);

    return (jbyte)__boltffi_result;
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1function_1demo_1fetch_1count_1complete(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    FfiStatus __boltffi_status = (FfiStatus){0};

    uint32_t __boltffi_result = boltffi_async_function_demo_fetch_count_complete((RustFutureHandle)handle, &__boltffi_status);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return 0;
    }

    return (jint)__boltffi_result;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1function_1demo_1fetch_1count_1panic_1message(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_async_function_demo_fetch_count_panic_message((RustFutureHandle)handle);

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1function_1demo_1fetch_1count_1cancel(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    boltffi_async_function_demo_fetch_count_cancel((RustFutureHandle)handle);

    return;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1function_1demo_1fetch_1count_1free(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    boltffi_async_function_demo_fetch_count_free((RustFutureHandle)handle);

    return;
}
